--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ pkg/
 
 # Visual Studio 2015 cache/options directory
 .vs/
+.vscode/
+*.vscode/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
