backend setup continues..

--- a/Avocado/Avocado.Api/appsettings.json
+++ b/Avocado/Avocado.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AvocadoDatabase": "Server=.\\SQLEXPRESS;Database=Avocado;Trusted_Connection=True;Application Name=Avocado;"
+    "AvocadoDatabase": "Server=.\\SQLEXPRESS;Database=Avocado;Trusted_Connection=True;Application Name=Avocado;TrustServerCertificate=True;"
   },
   "JwtSettings": {
     "Key": "ivA9wjxjd3TuwULW6-NsZDi0WK9Kpth_pJ5lpJbL3A1ER0IfqmBAgXlyOLCltVQwh6o9ar_VprKXt-xuAdWp6Q"
