--- a/Avocado/Avocado.WebAPI/appsettings.json
+++ b/Avocado/Avocado.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AvocadoDatabase": "Server=.\\SQLEXPRESS;Database=Avocado;Trusted_Connection=True;Encrypt=False;Application Name=Avocado;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
